src/CoCoA-5/tests/homomorphisms.cocoa5
Use R ::= QQ[x];
A := x;
Use P ::= R[y];
B := y;
//A*B; // error
Phi := // ?!?!? commentando questa linea, valgrind non si lagna...
CanonicalHom(R, P);
type(Phi);
Phi(A)*B; // ok

-- Define F(...)
-- 	Return Phi(...);
-- EndDefine


